# comfy-cliption

./: LICENSE  README.md  __init__.py  pyproject.toml  requirements.txt
media/: CIPtion-flux-schnell.json  CLIPtion-SD3.5L.json  CLIPtion-example.json
